# led-controller

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c3  sdkconfig.esp32c6  sdkconfig.esp32s2  sdkconfig.esp32s3
.github/workflows/: release-firmware.yml
components/animation_layer/: CMakeLists.txt  animation_layer.c
components/app_controller/: CMakeLists.txt  app_controller.c
components/app_controller/include/: app_controller.h
components/audio_input/: CMakeLists.txt  audio_input.c
components/audio_processor/: CMakeLists.txt  audio_processor.c
components/config_manager/: CMakeLists.txt  config_manager.c
components/display_manager/: CMakeLists.txt
components/effect_registry/: CMakeLists.txt  effect_registry.c
components/led_driver/: CMakeLists.txt  idf_component.yml  led_driver.c
components/matrix_engine/: CMakeLists.txt  matrix_engine.c
components/mode_manager/: CMakeLists.txt  mode_manager.c
components/palette_manager/: CMakeLists.txt  palette_manager.c
components/random_effect_manager/: CMakeLists.txt  random_effect_manager.c
components/reactive_engine/: CMakeLists.txt  reactive_engine.c
components/reactive_matrix_renderer/: CMakeLists.txt  reactive_matrix_renderer.c
components/reactive_renderer/: CMakeLists.txt  reactive_renderer.c
docs/: api.md  architecture.md  hardware.md  target-builds.md  usage.md
main/: CMakeLists.txt  main.c
tools/: build-target.ps1  firmware.py  flash-target.ps1  package_release.py  update_changelog.py
(+72 files in other folders)
